[package]
name = "channel-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
version = "0.9"