[package]
name = "channel-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "standard_framework",
]
version = "0.11"
